@@ -1,6 +1,9 @@
 == 1.3.3 released 2008-10-03
 
 * Fixed modifiers being double escaped on equals condition
+* Fixed bug when merging conditions with array substitutions
+* Updated blank condition to check if the values is false or not
+* Fixed type for the year modifier in the mysql adapter
 
 == 1.3.2 released 2008-10-03
 
